# HEAserver

HEA_assistant_server/: pyproject.toml  server.py
HEA_assistant_server/HEA_predictTool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
HEA_assistant_server/data/: binary_Hmix.csv
HEA_assistant_server/dependencies/: HEA_calculator.py  HEA_extractor.py  convert.py
HEA_assistant_server/dependencies/llmchat/: chater.py  cli.py  log.py
HEA_assistant_server/dependencies/paperextractor/: csv_stack.py  csv_write.py  filter_pdf.py  postprocess.py
HEA_assistant_server/dependencies/paperextractor/utils/: doi_to_name.py  get_sub_doi.py
HEA_assistant_server/dependencies/paperextractor/utils/extract_figure/: get_figure.py  get_sub_figure.py
HEA_assistant_server/models/: Structure_predict_model.pkl  Tm_predict_model_xgb.pkl  Type_predict_model_XGB.pkl  feats_scaler_Tm.pkl  feats_scaler_struc.pkl  feats_scaler_type.pkl
