[project]
name = "HEA_predictTool"
version = "0.1.0"
description = "predict the crystal structure of a type of high entropy alloy"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "numpy",
    "pandas",
    "featurebox",
    "xgboost",
    "joblib",
    "pandas",
    "arxiv",
    "pathlib",
    "requests",
    "bohrium-sdk>=0.10.0"
]

[tool.setuptools.packages.find]
exclude = ["data", "models", "dependencies"]

[project.scripts]
example-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"
